# llc-rs

./: Cargo.toml  LICENSE  README.md  package.json  sync.sh
.github/workflows/: build.yml  sync.yml
LimbusCompany_Data/Lang/LLC_zh-CN/: AbEventsResultLog.json  AbEvents_night-clean-up-re.json  AbEvents_twth.json  AbnormalityGuides.json  AbnormalityGuides_Refraction2.json  ActionEvents-x1p1c1.json  ActionEvents.json  ActionEvents_Mirror.json  ActionEvents_Mirror7.json  ActionEvents_night-clean-up-re.json  ActionEvents_twth.json  Announcer.json  BattleHint.json  BattleKeywords-BossRaid.json  BattleKeywords-a1c5p2.json  BattleKeywords-a1c9p3.json  BattleKeywords-pilgrimage.json  BattleKeywords-twth.json  BattleKeywords.json  BattleKeywords_Mirror7.json  BattleResultHint-twth.json  BattleSpeechBubbleDlg-a1c9p1.json  BattleSpeechBubbleDlg-a1c9p3.json  BattleSpeechBubbleDlg-twth.json  BossRaidUI.json  BuffAbilities.json  Bufs-a1c5p2.json  Bufs-a1c9p3.json  Bufs-pilgrimage.json  Bufs-twth.json  Bufs.json  Bufs_Mirror7.json  EGOgift_MirrorDungeon-EventTheme.json  EGOgift_MirrorDungeon-EventTheme_2.json  EGOgift_MirrorDungeon-StoryTheme.json  EGOgift_MirrorDungeon-StoryTheme_2.json  EGOgift_MirrorDungeon-mowe.json  EGOgift_MirrorDungeon-x1p1c1.json  EGOgift_MirrorDungeon.json  EGOgift_MirrorDungeon_2.json  (+92 more)
LimbusCompany_Data/Lang/LLC_zh-CN/BattleAnnouncerDlg/: Announcer_Kira_46.json  Announcer_LCE_45.json
LimbusCompany_Data/Lang/LLC_zh-CN/EGOVoiceDig/: Voice_EGO_Rodion_9.json
LimbusCompany_Data/Lang/LLC_zh-CN/Info/: version.json
LimbusCompany_Data/Lang/LLC_zh-CN/PersonalityVoiceDlg/: Voice_Faust_KumoRings_10215.json  Voice_Gregor_LCE_11215.json  Voice_Heathcliff_Middle_10715.json  Voice_Honglu_KumoRings_10614.json  Voice_Meursault_Rings_10515.json  Voice_Outis_LEGO_11107.json  Voice_Rodion_Epi_10903.json  Voice_Rodion_Rings_10915.json
LimbusCompany_Data/Lang/LLC_zh-CN/StoryData/: 1D306A.json  4D304B.json  E003I1.json  E003I2.json  E003I3.json  E003I4.json  E003X.json  E090X.json  E301A.json  E303B.json  E306A.json  E620B.json  E703B.json  E704B.json  E705B.json  E706B.json  E707B.json  E708B.json  E709B.json  E711A.json  E711B.json  E712B.json  E713B.json  E714B.json  E717A.json  E725B.json  E726A.json  E728B.json  E901B.json  E902B.json  E903A.json  E903B.json  E904B.json  E905B.json  E906A.json  E906B.json  E907B.json  E908B.json  E909B.json  E910A.json  (+44 more)
crates/llc-launcher-rs/: Cargo.toml  build.rs
crates/llc-launcher-rs/src/: config.rs  installer.rs  llc.rs  logging.rs  main.rs  self_update.rs  splash.rs  utils.rs
crates/llc-launcher-rs/src/splash/: color.rs  font.rs  style.rs
crates/llc-launcher-rs/src/zeroasso/: download_file.rs  get_hash.rs  get_version.rs  mod.rs  utils.rs
crates/llc-rs/: Cargo.toml  build.rs
crates/llc-rs/src/: config.rs  lib.rs  npm.rs  utils.rs
crates/llc-rs/src/steam_support/: common.rs  linux.rs  mod.rs  windows.rs
crates/llc-rs/src/utils/: eyre_backtrace.rs
crates/llc-rs/src/zeroasso/: download_file.rs  get_hash.rs  get_version.rs  mod.rs
