[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Akase Haruka <light.tsing@gmail.com>"]
edition = "2024"
homepage = "https://github.com/lightsing/llc-rs"
license = "AGPL-3.0-or-later"
repository = "https://github.com/lightsing/llc-rs.git"
rust-version = "1.89"
version = "0.1.7"

[workspace.dependencies]
bytes = "1.10"
compact_str = "0.9"
ctor = "0.4"
directories = "6.0"
eyre = "0.6"
flate2 = "1.1"
futures = "0.3"
heapless = "0.8"
hex = "0.4"
llc-rs = { path = "crates/llc-rs" }
minijinja = "2.11"
msgbox = "0.7"
os_info = { version = "3", default-features = false }
reqwest = { version = "0.12", features = [
  "charset",
  "json",
  "deflate",
  "brotli",
  "gzip",
  "rustls-tls-webpki-roots",
  "system-proxy",
], default-features = false }
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.14"
sevenz-rust = "0.6"
sha2 = "0.10"
smallvec = { version = "=2.0.0-alpha.11", features = ["serde", "may_dangle", "specialization"] }
tar = "0.4"
thiserror = "2.0"
tokio = "1"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
url = "2.5"
vdf-reader = "0.3"
winreg = "0.55"
winres = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
