[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Akase Haruka <light.tsing@gmail.com>"]
edition = "2024"
homepage = "https://github.com/lightsing/llc-rs"
license = "AGPL-3.0-or-later"
repository = "https://github.com/lightsing/llc-rs.git"
rust-version = "1.89"
version = "0.1.17"

[workspace.dependencies]
async-broadcast = { version = "0.7.2", default-features = false }
ctor = "0.4"
directories = "6.0"
eyre = "0.6"
filetime = "0.2"
flate2 = "1.1"
futures-util = { version = "0.3", default-features = false }
hex = "0.4"
llc-rs = { path = "crates/llc-rs" }
minijinja = { version = "2.11", default-features = false }
msgbox = "0.7"
nyquest = { version = "0.4", features = ["async", "async-stream", "json"] }
nyquest-backend-curl = { version = "0.4", features = ["async", "async-stream"] }
nyquest-backend-winrt = { version = "0.4", features = ["async", "async-stream"] }
openssl = { version = "0.10", features = ["vendored"] }
os_info = { version = "3", default-features = false }
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.14"
sevenz-rust = { version = "0.6", default-features = false }
sha2 = "0.10"
smol = "2.0"
smol-macros = "0.1"
tar = { version = "0.4", default-features = false }
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-aliyun-sls = { git = "https://github.com/lightsing/tracing-aliyun-sls", default-features = false }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false }
url = "2.5"
uuid = { version = "1.17", default-features = false }
vdf-reader = "0.3"
winreg = "0.55"
winres = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
