[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "llc-launcher-rs"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ctor.workspace = true
directories.workspace = true
eyre.workspace = true
flate2.workspace = true
llc-rs.workspace = true
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["hex"] }
sevenz-rust.workspace = true
tar.workspace = true
smol.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
url.workspace = true
filetime.workspace = true
nyquest.workspace = true
nyquest-preset.workspace = true


[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
smol-macros.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
msgbox.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
winres.workspace = true
