[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "llc-launcher-rs"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ctor.workspace = true
directories.workspace = true
eyre.workspace = true
filetime.workspace = true
flate2.workspace = true
llc-rs.workspace = true
nyquest.workspace = true
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["hex"] }
sevenz-rust.workspace = true
smol.workspace = true
tar.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
url.workspace = true


[dev-dependencies]
smol-macros.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(target_os = "windows")'.dependencies]
msgbox.workspace = true
nyquest-backend-winrt.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
winres.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nyquest-backend-curl.workspace = true
openssl.workspace = true