[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "llc-launcher-rs"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-broadcast.workspace = true
bytes.workspace = true
ctor.workspace = true
directories.workspace = true
eyre.workspace = true
filetime.workspace = true
flate2.workspace = true
llc-rs.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["hex"] }
sevenz-rust.workspace = true
tar.workspace = true
tokio = { workspace = true, features = ["rt", "fs", "io-util", "time", "macros"] }
toml.workspace = true
tracing.workspace = true
tracing-aliyun-sls = { workspace = true, default-features = false, features = ["reqwest-rustls"] }
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
url.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(target_os = "windows")'.dependencies]
msgbox.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
winres.workspace = true
