[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "llc-rs"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
futures-util = { workspace = true, features = ["io"] }
hex.workspace = true
minijinja = { workspace = true, features = ["loader", "serde"] }
nyquest.workspace = true
os_info.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["hex"] }
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
vdf-reader.workspace = true

[dev-dependencies]
ctor.workspace = true
serde_json.workspace = true
sevenz-rust.workspace = true
smol-macros.workspace = true
toml.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg.workspace = true

[target.'cfg(target_os = "windows")'.dev-dependencies]
nyquest-backend-winrt.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
nyquest-backend-curl.workspace = true
