[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "llc-rs"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
futures-util = { workspace = true, features = ["io"] }
hex.workspace = true
nyquest.workspace = true
nyquest-preset.workspace = true
os_info.workspace = true
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["hex"] }
sha2.workspace = true
smol.workspace = true
ssri.workspace = true
thiserror.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
vdf-reader.workspace = true

[dev-dependencies]
ctor.workspace = true
serde_json.workspace = true
smol-macros.workspace = true
toml.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg.workspace = true
