[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "llc-rs"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bytes.workspace = true
futures-util = { workspace = true, features = ["io"] }
os_info.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["hex"] }
ssri.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
vdf-reader.workspace = true

[dev-dependencies]
ctor.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "test-util"] }
toml.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg.workspace = true
